Fix scrolling on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -118,10 +118,6 @@ main {
   justify-content: space-between;
 }
 
-.no-scroll {
-  overflow: hidden;
-}
-
 .no-wrap {
   white-space: nowrap;
 }
